<resources>
    <string name="app_name">FragmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_thread_label_menu">Thread</string>
    <string name="action_progress_label_menu">Progress</string>
    <string name="action_camera_label_menu">Kamera</string>
    <string name="action_form_label_menu">Formularz</string>
    <string name="action_exercise_label_menu">Ćwiczenie - egzekutory</string>
    <string name="action_main_label_menu">Lista</string>
    <string name="action_sensor_label_menu">Sensory</string>
</resources>