<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_thread"
        android:orderInCategory="100"
        android:title="@string/action_thread_label_menu"
        />
    <item
        android:id="@+id/action_form"
        android:orderInCategory="100"
        android:title="@string/action_form_label_menu"
        />
    <item
        android:id="@+id/action_progress"
        android:orderInCategory="100"
        android:title="@string/action_progress_label_menu"
        />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_main_label_menu"
        />
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="@string/action_camera_label_menu"
        />
    <item
        android:id="@+id/action_exercise"
        android:orderInCategory="100"
        android:title="@string/action_exercise_label_menu"
        />
</menu>